<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">MovieStore</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="filter">Filter </string>
    <string name="popular_movies">Popular Movies </string>
    <string name="top_rated_movies">Top Rated Movies </string>
    <string name="menu_bottombar_MovieList">MovieList </string>
    <string name="menu_bottombar_Favorite">Favorite</string>
    <string name="menu_bottombar_Setting">Setting</string>
    <string name="menu_bottombar_About">About</string>
    <string name="upcoming_movies">Upcoming Movies </string>
    <string name="nowplaying_movies">Nowplaying Movies </string>
    <string name="movie_with">Movie with rate from </string>
    <string name="from_release">From Release Year </string>

    <string name="sortby">Sort By</string>
    <string name="release_date">Release Date </string>
    <string name="rating">Rating</string>

    <string name="number_of_loading">Number Of Loading </string>
    <string name="number_of_page">Number of Page per Loading </string>

    <string name="release_date_detail">Release date </string>
    <string name="rating_detail">Rating  </string>
    <string name="muoi">/10</string>
    <string name="adult">Adult</string>

    <string name="reminder">REMINDER</string>

    <string name="cast">Cast and Crew</string>
    <string-array name="Gender">
        <item>Men</item>
        <item>Women</item>

    </string-array>
    <!-- The user visible name of the application. [CHAR LIMIT=20] -->
    <string name="application_name">ExoPlayer2 Demo</string>

    <string name="video">Video</string>

    <string name="audio">Audio</string>

    <string name="text">Text</string>

    <string name="retry">Retry</string>

    <string name="selection_disabled">Disabled</string>

    <string name="selection_default">Default</string>

    <string name="selection_default_none">Default (none)</string>

    <string name="unexpected_intent_action">Unexpected intent action: <xliff:g id="action">%1$s</xliff:g></string>

    <string name="enable_random_adaptation">Enable random adaptation</string>

    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>

    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>

    <string name="error_drm_unknown">An unknown DRM error occurred</string>

    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>

    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>

    <string name="error_querying_decoders">Unable to query device decoders</string>

    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>

    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>

    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>

    <string name="storage_permission_denied">Permission to access storage was denied</string>

    <string name="sample_list_load_error">One or more sample lists failed to load</string>
</resources>
