<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutDetailMoviesFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical">

    <!--Favorite-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.25"
        android:background="@color/cardbackground"
        android:padding="4dp">

        <CheckBox
            android:id="@+id/chkbFavourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:button="@drawable/custom_checkbox" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/chkbFavourite"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:text="@string/release_date_detail"
                    android:textColor="#20201f" />

                <TextView
                    android:id="@+id/txtReleaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" 2016/05/20" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:text="@string/rating_detail"
                    android:textColor="#20201f" />

                <TextView
                    android:id="@+id/txtRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="7" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/muoi" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/imvAdult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />

    </RelativeLayout>

    <!--Poster-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6.25"
        android:background="#d4717153"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:weightSum="7"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imvPoster"
                android:layout_width="145dp"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="4dp"
                android:scaleType="fitXY"
                android:src="@drawable/placeholder_small" />

            <Button
                android:id="@+id/btnPlay"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="@color/cardbackground"
                android:text="Play Video" />

            <Button
                android:id="@+id/btnReminder"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="@color/cardbackground"
                android:text="@string/reminder"
                android:textColor="#20201f" />

            <TextView
                android:id="@+id/txtReminderDate"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:maxLines="1"
                android:text="YYYY-MM-DD"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="6dp"
            android:layout_weight="6">

            <TextView
                android:id="@+id/txtOverview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#07000000"
                android:gravity="fill_horizontal"
                android:scrollbars="vertical"
                android:textColor="@android:color/white" />


        </LinearLayout>
    </LinearLayout>

    <!--Cast & Crew-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF4081"
            android:text="Cast and Crew"
            android:textColor="@android:color/white" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

</LinearLayout>


